# icfpc2023

./: .gitignore  Cargo.toml  LICENSE  README.md  problems_meta.txt  shell.nix
problems/: 22.json  23.json  24.json  25.json  26.json  27.json  7.json
problems_extra/: 56_pruned_data.json  57_pruned_data.json  58_pruned_data.json  59_pruned_data.json  60_pruned_data.json  61_pruned_data.json  62_pruned_data.json  63_pruned_data.json  64_pruned_data.json  65_pruned_data.json  66_pruned_data.json  67_pruned_data.json  68_pruned_data.json  69_pruned_data.json  70_pruned_data.json  71_pruned_data.json  72_pruned_data.json  73_pruned_data.json  74_pruned_data.json  75_pruned_data.json  76_pruned_data.json  77_pruned_data.json  78_pruned_data.json  79_pruned_data.json  80_pruned_data.json  81_pruned_data.json  82_pruned_data.json  83_pruned_data.json  84_pruned_data.json  85_pruned_data.json  86_pruned_data.json  87_pruned_data.json  88_pruned_data.json  89_pruned_data.json  90_pruned_data.json
scripts/: problems.sh  problems_meta.sh  submit.sh
solutions/best/: 0_meta.json  0_solution.json  10_meta.json  10_solution.json  11_meta.json  11_solution.json  12_meta.json  12_solution.json  13_meta.json  13_solution.json  15_meta.json  15_solution.json  17_meta.json  17_solution.json  18_meta.json  18_solution.json  19_meta.json  19_solution.json  1_meta.json  1_solution.json  20_meta.json  20_solution.json  21_meta.json  21_solution.json  22_meta.json  (+153 more)
src/: collider.rs  common.rs  diamond_grid.rs  dto.rs  geometry.rs  gui.rs  helpers.rs  main.rs  new_scorer.rs  scorer.rs
(+31 files in other folders)
