[package]
name = "icfpc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
dyn-clone = "1.0.11"
raylib = { version = "3.7", git = "https://github.com/deltaphc/raylib-rs"}
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.85"
nalgebra = "^0.32"

[features]
wayland = ["raylib/wayland"]
